Review comments
Change CredsRemoveReferences to CredsDeleteReferences.
