# api/server/sdk/api/api.swagger.json
@@ -2484,6 +2484,10 @@
         "title": "Defines a response from creating a credential",
         "type": "object"
       },
+      "apiSdkCredentialDeleteReferencesResponse": {
+        "title": "Empty response",
+        "type": "object"
+      },
       "apiSdkCredentialDeleteResponse": {
         "title": "Empty response",
         "type": "object"
@@ -2539,10 +2543,6 @@
             "type": "boolean"
           }
         },
-        "type": "object"
-      },
-      "apiSdkCredentialRemoveReferencesResponse": {
-        "title": "Empty response",
         "type": "object"
       },
       "apiSdkCredentialValidateResponse": {
@@ -6039,6 +6039,37 @@
         ]
       }
     },
+    "/v1/credentials/deleteref/{credential_id}": {
+      "post": {
+        "operationId": "DeleteReferences",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "credential_id",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/apiSdkCredentialDeleteReferencesResponse"
+                }
+              }
+            },
+            "description": ""
+          }
+        },
+        "summary": "DeleteReferences is used to remove references to credentials",
+        "tags": [
+          "OpenStorageCredentials"
+        ]
+      }
+    },
     "/v1/credentials/inspect/{credential_id}": {
       "get": {
         "operationId": "Inspect",
@@ -6065,37 +6096,6 @@
           }
         },
         "summary": "Inspect returns the information about a credential, but does not return the secret key.",
-        "tags": [
-          "OpenStorageCredentials"
-        ]
-      }
-    },
-    "/v1/credentials/removeref/{credential_id}": {
-      "post": {
-        "operationId": "RemoveReferences",
-        "parameters": [
-          {
-            "in": "path",
-            "name": "credential_id",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/apiSdkCredentialRemoveReferencesResponse"
-                }
-              }
-            },
-            "description": ""
-          }
-        },
-        "summary": "RemoveReferences is used to remove references to credentials",
         "tags": [
           "OpenStorageCredentials"
         ]
